--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -1,3 +1,4 @@
+KERNEL_ARCH_AFLAGS=-f elf32
 KERNEL_ARCH_CFLAGS=
 KERNEL_ARCH_CPPFLAGS=
 KERNEL_ARCH_LDFLAGS=
@@ -6,3 +7,5 @@ KERNEL_ARCH_LIBS=
 KERNEL_ARCH_OBJS=\
 $(ARCHDIR)/boot.o \
 $(ARCHDIR)/tty.o \
+$(ARCHDIR)/gdt.o \
+$(ARCHDIR)/gdt_flush.o \
