Handle interrupts (with bug! not sure why yet)

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -11,3 +11,5 @@ $(ARCHDIR)/gdt.o \
 $(ARCHDIR)/gdt_flush.o \
 $(ARCHDIR)/idt.o \
 $(ARCHDIR)/idt_flush.o \
+$(ARCHDIR)/interrupts.o \
+$(ARCHDIR)/isr.o \
