Rename interrupts.asm to isr_declarations.asm for clarity

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -11,5 +11,5 @@ $(ARCHDIR)/gdt.o \
 $(ARCHDIR)/gdt_flush.o \
 $(ARCHDIR)/idt.o \
 $(ARCHDIR)/idt_flush.o \
-$(ARCHDIR)/interrupts.o \
+$(ARCHDIR)/isr_declarations.o \
 $(ARCHDIR)/isr.o \
