Add irq handling and cleanup headers

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -13,3 +13,5 @@ $(ARCHDIR)/idt.o \
 $(ARCHDIR)/idt_flush.o \
 $(ARCHDIR)/isr_declarations.o \
 $(ARCHDIR)/isr.o \
+$(ARCHDIR)/irq_declarations.o \
+$(ARCHDIR)/irq.o \
