--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -6,7 +6,6 @@ KERNEL_ARCH_LIBS=
 
 KERNEL_ARCH_OBJS=\
 $(ARCHDIR)/boot.o \
-$(ARCHDIR)/tty.o \
 $(ARCHDIR)/gdt.o \
 $(ARCHDIR)/gdt_flush.o \
 $(ARCHDIR)/idt.o \
@@ -15,3 +14,5 @@ $(ARCHDIR)/isr_declarations.o \
 $(ARCHDIR)/isr.o \
 $(ARCHDIR)/irq_declarations.o \
 $(ARCHDIR)/irq.o \
+$(ARCHDIR)/timer.o \
+$(ARCHDIR)/tty.o
