Add basic keyboard support

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -16,4 +16,5 @@ $(ARCHDIR)/isr.o \
 $(ARCHDIR)/irq_declarations.o \
 $(ARCHDIR)/irq.o \
 $(ARCHDIR)/timer.o \
-$(ARCHDIR)/tty.o
+$(ARCHDIR)/tty.o \
+$(ARCHDIR)/keyboard.o
