--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -17,4 +17,4 @@ $(ARCHDIR)/irq_declarations.o \
 $(ARCHDIR)/irq.o \
 $(ARCHDIR)/timer.o \
 $(ARCHDIR)/tty.o \
-$(ARCHDIR)/keyboard.o
+$(ARCHDIR)/keyboard_driver.o
