Add memory manager header / impl

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -11,6 +11,7 @@ $(ARCHDIR)/gdt.o \
 $(ARCHDIR)/gdt_flush.o \
 $(ARCHDIR)/idt.o \
 $(ARCHDIR)/idt_flush.o \
+$(ARCHDIR)/memoryManager.o \
 $(ARCHDIR)/isr_declarations.o \
 $(ARCHDIR)/isr.o \
 $(ARCHDIR)/irq_declarations.o \
