Oopify the gdt handling

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -8,7 +8,7 @@ KERNEL_ARCH_OBJS=\
 $(ARCHDIR)/boot.o \
 $(ARCHDIR)/KernelManager.o \
 $(ARCHDIR)/cpu.o \
-$(ARCHDIR)/gdt.o \
+$(ARCHDIR)/GdtManager.o \
 $(ARCHDIR)/gdt_flush.o \
 $(ARCHDIR)/idt.o \
 $(ARCHDIR)/idt_flush.o \
