--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -10,9 +10,9 @@ $(ARCHDIR)/KernelManager.o \
 $(ARCHDIR)/cpu.o \
 $(ARCHDIR)/GdtManager.o \
 $(ARCHDIR)/gdt_flush.o \
-$(ARCHDIR)/idt.o \
+$(ARCHDIR)/InterruptManager.o \
 $(ARCHDIR)/idt_flush.o \
-$(ARCHDIR)/memoryManager.o \
+$(ARCHDIR)/MemoryManager.o \
 $(ARCHDIR)/isr_declarations.o \
 $(ARCHDIR)/isr.o \
 $(ARCHDIR)/irq_declarations.o \
