Move interrupt handling into an interrupt manager

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -14,7 +14,7 @@ $(ARCHDIR)/InterruptManager.o \
 $(ARCHDIR)/idt_flush.o \
 $(ARCHDIR)/MemoryManager.o \
 $(ARCHDIR)/isr_declarations.o \
-$(ARCHDIR)/isr.o \
+$(ARCHDIR)/isr_handler.o \
 $(ARCHDIR)/irq_declarations.o \
 $(ARCHDIR)/irq.o \
 $(ARCHDIR)/timer.o \
