Split irq.c / irq.h into smaller files

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -16,7 +16,7 @@ $(ARCHDIR)/MemoryManager.o \
 $(ARCHDIR)/isr_declarations.o \
 $(ARCHDIR)/isr_handler.o \
 $(ARCHDIR)/irq_declarations.o \
-$(ARCHDIR)/irq.o \
+$(ARCHDIR)/irq_handler.o \
 $(ARCHDIR)/timer.o \
 $(ARCHDIR)/tty.o \
 $(ARCHDIR)/keyboard_driver.o
