Modify tty_manager to be a proper class

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -18,5 +18,5 @@ $(ARCHDIR)/isr_handler.o \
 $(ARCHDIR)/irq_declarations.o \
 $(ARCHDIR)/irq_handler.o \
 $(ARCHDIR)/timer.o \
-$(ARCHDIR)/tty.o \
+$(ARCHDIR)/TtyManager.o \
 $(ARCHDIR)/keyboard_driver.o
