Make timer manager a proper class

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -17,6 +17,6 @@ $(ARCHDIR)/isr_declarations.o \
 $(ARCHDIR)/isr_handler.o \
 $(ARCHDIR)/irq_declarations.o \
 $(ARCHDIR)/irq_handler.o \
-$(ARCHDIR)/timer.o \
+$(ARCHDIR)/TimerManager.o \
 $(ARCHDIR)/TtyManager.o \
 $(ARCHDIR)/keyboard_driver.o
