--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -19,4 +19,4 @@ $(ARCHDIR)/irq_declarations.o \
 $(ARCHDIR)/irq_handler.o \
 $(ARCHDIR)/TimerManager.o \
 $(ARCHDIR)/TtyManager.o \
-$(ARCHDIR)/keyboard_driver.o
+$(ARCHDIR)/KeyboardDriver.o
