--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -7,7 +7,7 @@ KERNEL_ARCH_LIBS=
 KERNEL_ARCH_OBJS=\
 $(ARCHDIR)/boot.o \
 $(ARCHDIR)/KernelManager.o \
-$(ARCHDIR)/cpu.o \
+$(ARCHDIR)/CpuManager.o \
 $(ARCHDIR)/GdtManager.o \
 $(ARCHDIR)/gdt_flush.o \
 $(ARCHDIR)/InterruptManager.o \
