Add simple user manager, user concept and display the prompt for active user

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -17,6 +17,8 @@ $(ARCHDIR)/isr_handler.o \
 $(ARCHDIR)/irq_declarations.o \
 $(ARCHDIR)/irq_handler.o \
 $(ARCHDIR)/TimerManager.o \
+$(ARCHDIR)/UserManager.o \
+$(ARCHDIR)/User.o \
 $(ARCHDIR)/TtyManager.o \
 $(ARCHDIR)/KeyboardDriver.o \
 $(ARCHDIR)/MemoryHeap.o
