Add stub class for process

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -21,4 +21,5 @@ $(ARCHDIR)/UserManager.o \
 $(ARCHDIR)/User.o \
 $(ARCHDIR)/TtyManager.o \
 $(ARCHDIR)/KeyboardDriver.o \
-$(ARCHDIR)/MemoryHeap.o
+$(ARCHDIR)/MemoryHeap.o \
+$(ARCHDIR)/Process.o
