Add cxa for pure virtual calls in kernel

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -6,6 +6,7 @@ KERNEL_ARCH_LIBS=
 
 KERNEL_ARCH_OBJS=\
 $(ARCHDIR)/boot.o \
+$(ARCHDIR)/cxa.o \
 $(ARCHDIR)/KernelManager.o \
 $(ARCHDIR)/CpuManager.o \
 $(ARCHDIR)/GdtManager.o \
