Rename memory manager to paging manager

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -12,7 +12,7 @@ $(ARCHDIR)/CpuManager.o \
 $(ARCHDIR)/GdtManager.o \
 $(ARCHDIR)/gdt_flush.o \
 $(ARCHDIR)/InterruptManager.o \
-$(ARCHDIR)/MemoryManager.o \
+$(ARCHDIR)/PagingManager.o \
 $(ARCHDIR)/isr_declarations.o \
 $(ARCHDIR)/isr_handler.o \
 $(ARCHDIR)/irq_declarations.o \
