Add stubs for new and delete

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -7,6 +7,8 @@ KERNEL_ARCH_LIBS=
 KERNEL_ARCH_OBJS=\
 $(ARCHDIR)/boot.o \
 $(ARCHDIR)/cxa.o \
+$(ARCHDIR)/new.o \
+$(ARCHDIR)/delete.o \
 $(ARCHDIR)/KernelManager.o \
 $(ARCHDIR)/CpuManager.o \
 $(ARCHDIR)/GdtManager.o \
