Add compilation unit for mem block header

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -24,5 +24,6 @@ $(ARCHDIR)/UserManager.o \
 $(ARCHDIR)/User.o \
 $(ARCHDIR)/TtyManager.o \
 $(ARCHDIR)/KeyboardDriver.o \
+$(ARCHDIR)/MemoryBlockHeader.o \
 $(ARCHDIR)/MemoryHeap.o \
 $(ARCHDIR)/Process.o
